fixed a tag enclosing the img in the mobile-header section, added link ids to navigate properly on mobile site

--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -141,7 +141,7 @@
     display: block;
     padding: 15px 20px;
   }
-  .mobile-one .mobile-nav li a img {
+  .mobile-one .mobile-nav li img {
     width: 100%;
   }
 
